# duct_visualisation

./: .gitignore  README.md  analysing_jsons.py  core.py  duct_tracking_GUI.py  duct_tracking_development.py  new_version_dev.py  post_analysis2.py  post_annotation_analysis.py  pyproject.toml  visualising_3d_structures.py
analysis/: additional_movie.py  cumulative_area.py  duct_lengths.py  ext_fig_1_cumulative_area.py  ext_theory_termination_rate.py  fig1_and_4_plotting_3d_ducts_into_flat_dendrogram.py  fig1_and_4_plotting_3d_ducts_with_extensions.py  fig_3_and_ext_fig_3_striping_sections.py  plotting_3d_ducts_into_flat_dendrogram.py  simple_dendrogram_from_tracing.py  striping_sections.py  striping_speedup.py  tree_with_percentages.py
analysis/sequencing/: plot_vaf_distribution.py  sequence_data_analysis.py  sequence_data_analysis_batch1.py  sequence_data_analysis_batch2.py  sequence_data_analysis_batch2_4samples.py  (+1 more)
hooks/: hook-imagecodecs.py
old/: analysing_jsons.py  post_analysis2.py  tree_with_percentages.py
simulation/: adulthood.py  duct_development_animation.py  duct_excision_simulations.py  duct_excision_single_hits.py  ext_fig_2_puberty_simulation_on_carmine_staining.py  fig6_plots.py  fig6_testing.py  figure3_simulations.py  find_a_duct_id_from_simulation.py  model_figure_1.py  new_figure_3.py  plotting_and_saving.py  plotting_simulated_ducts.py  plotting_simulated_ducts_striped.py  puberty.py  puberty_deposit_elimination.py  puberty_population_dynamics.py  single_duct_hris_idea.py  testing_adulthood.py  testing_puberty.py  testing_single_duct.py
(+33 files in other folders)
