[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duct-tracker"
version = "1.0.0"
description = "Duct tracking of 2D and 3D mammary gland images"
readme = "README.md"
authors = [{ name = "Jeroen Doornbos", email = "j.doornbos@nki.nl" }]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Barcoding", "Polytope", "Fluorescent images"]
dependencies = ["pandas", "pyqt5", "shapely", "networkx","matplotlib", "scikit-image","seaborn","scikit-learn", "opencv-python-headless", "scipy", "numpy", "tifffile"]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "pytest", "mypy"]

[tool.setuptools]
py-modules = []
package-dir = {""="src"}

[tool.mypy]
python_version = '3.9'
mypy_path = ['src']
packages = "duct-tracker"
strict = true

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"duct_tracker/version.py" = [
    "{version}"
]

[tool.pytest.ini_options]
pythonpath = [
  './src'
]